--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .the-big-header {
-  background: url("./Blueprint.png") no-repeat center center fixed;
+  background: url("./Blueprint.png") repeat center center;
   width: 100%;
   min-height: 50vh;
   display: flex;
@@ -39,4 +39,17 @@ body {
   .container {
     width: 1170px;
   }
+}
+
+#constrained-capacity-container {
+  width: 100%;
+  background-color: #ddd;
+}
+
+
+#constrained-capacity-container canvas {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100vw;
 }
